# NovelDownloader

./: BaseTemplate.py  BookTxt.py  Chinese81.py  IBiQiuGe.py  README.md  download.py  pyproject.toml  requirements.txt
noveldl/: BaseTemplate.py  Biquge365.py  BookTxt.py  Chinese81.py  IBiQiuGe.py  match.py
