[tool.poetry]
name = "novel-downloader"
version = "0.1.0"
description = "download free novels."
authors = ["Runfeng Tsui <runfengtsui@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
lxml = "^4.9.2"
pyfreeproxy = "^0.1.4"
fake-useragent = "^1.1.3"

[[tool.poetry.source]]
name = "Tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
