[tool.poetry]
name = "novel-downloader"
version = "0.2.0"
description = "download free novels."
authors = ["Runfeng Tsui <runfengtsui@yeah.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.2"
lxml = "^4.9.2"
pyfreeproxy = "^0.1.4"
fake-useragent = "^1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
